--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 description: "「hello」"
+header-img: "https://raw.githubusercontent.com/Glacheysist/ppp/pic/img/dvsdvsd.PNG"
 ---
 
 {% for post in paginator.posts %}
