--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "「hello」"
+description: "「三年了，我以为成长了的仍没有成长」"
 header-img: "https://raw.githubusercontent.com/Glacheysist/ppp/pic/img/dvsdvsd.PNG"
 ---
 
