--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "「1.1.1」"
-header-img: "https://raw.githubusercontent.com/Glacheysist/ppp/pic/img/dvsdvsd.PNG"
+header-img: "img/1.1.1.1.PNG"
 header-mask: 0.3
 multilingual: true
 ---
