--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "「1.1.1」"
+description: "「helpful!!!!!」"
 header-img: "img/1.1.1.1.PNG"
 header-mask: 0.3
 multilingual: true
